# guessing-game-gadget

./: CMakeLists.txt  LICENSE  README.md  guess.c  guess.h  lcd.c  lcd.h  localization.h  notes.txt  question.c  question.h  questions_en.txt  questions_tr.txt
